# code-search-mcp

./: .gitignore  CSHARP_SUPPORT.md  Cargo.toml  README.md  test.cs
src/: main.rs  parser.rs  queries.rs  server.rs  types.rs
src/tools/: get_definition.rs  get_file_structure.rs  get_signature.rs  list_symbols.rs  mod.rs
