[package]
name = "code-search-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "code-search-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.17", features = ["server", "transport-io"] }
tree-sitter = "0.25"
tree-sitter-language = "0.1"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tokio = { version = "1", features = ["full"] }
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
streaming-iterator = "0.1"
